# cpp-acceptance-testing

./: .clang-format  CMakeLists.txt  Readme.md
ReqIF/: .project  cpp-acceptance-testing.reqif
cat/: CMakeLists.txt  assert_macros.h  assertions.h  cat.cpp  cat.h  console_reporter.cpp  console_reporter.h
reqif_tool/: CMakeLists.txt  config.json  main.cpp
tests/: CMakeLists.txt  main.cpp
